fix: some font-sizes too small

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -24,6 +24,10 @@
   color: var(--clr-font-secondary);
 }
 
+.font-size-tiny {
+  font-size: 15px;
+}
+
 ::-moz-selection {
   /* Code for Firefox */
   color: red;
