--- a/components/Aside/index.scss
+++ b/components/Aside/index.scss
@@ -87,7 +87,7 @@ $bpHideAside: 900px;
   }
 
   &__text-secondary {
-    font-size: 0.7rem;
+    font-size: 12px;
     opacity: 0.7;
   }
 
