--- a/components/Pages/About/index.scss
+++ b/components/Pages/About/index.scss
@@ -1,5 +1,1 @@
-.about {
-  &__subtitle {
-    font-size: 0.85rem;
-  }
-}
+
